--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
-    "next": "14.0.1",
+    "next": "^14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-countup": "^6.5.0",
